# cfn-api-s3

./: .env  .gitignore  MODULE.bazel  README.md  accepted.yaml  docker-compose.yaml  web.yaml
www/: index.css  index.html  index.js
