module(
    name = "aws",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "0.32.2")

python = use_extension("@rules_python//extensions:python.bzl", "python")
python.toolchain(
    name = "python",
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_toolchains")

register_toolchains("@python_toolchains//:all")
